zero.vsense.fr/couchpotato.yml
---
apiVersion: v1
kind: Service
metadata:
  name: couchpotato
  labels:
    app: couchpotato
spec:
  selector:
    app: couchpotato
  ports:
    - port: 5050
      targetPort: couch-port
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchpotato
  labels:
    app: couchpotato
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: couchpotato
    spec:
      securityContext:
        fsGroup: 5001
      containers:
        - name: couchpotato
          image: "vsense/couchpotato:latest"
          ports:
            - name: couch-port
              containerPort: 5050
          volumeMounts:
            - name: couchpotato-config
              mountPath: /config
            - name: couchpotato-downloads
              mountPath: /downloads
      volumes:
        - name: couchpotato-config
          hostPath:
            path: /srv/configs/couchpotato
        - name: couchpotato-downloads
          hostPath:
            path: /srv/seedbox
