zero.vsense.fr/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: seedbox
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: archifleks-net-ssl
  rules:
    - host: seedbox.archifleks.net
      http:
        paths:
          - backend:
              serviceName: h5ai
              servicePort: 80
    - host: tv.archifleks.net
      http:
        paths:
          - backend:
              serviceName: sickrage
              servicePort: 8081
    - host: torrents.archifleks.net
      http:
        paths:
          - backend:
              serviceName: rtorrent-internal
              servicePort: 80
    - host: movies.archifleks.net
      http:
        paths:
          - backend:
              serviceName: couchpotato
              servicePort: 5050
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: archifleks-net-ssl
  rules:
    - host: traefik.archifleks.net
      http:
        paths:
          - backend:
              serviceName: traefik-console
              servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tectonic-console
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: archifleks-net-ssl
  rules:
    - host: tectonic.archifleks.net
      http:
        paths:
          - backend:
              serviceName: tectonic-console
              servicePort: 9000
